Build out unified data sync pipeline platform